Added custom Login, Register and ForgotPassword pages Implement logic of Register page Added sessions Completed admin register form